inou/prp/tests/errors/overflow_unroll.prp
/*
:name: overflow_unroll
:type: error
:error: does not fit
*/

// Comptime accumulation that overflows a small unsigned type. The `for` loop is
// unrolled in the upass runner (task 2u) into four `acc = acc + 5` stores;
// upass.bitwidth then tracks acc's range climbing to 20, which does not fit
// u4 [0, 15].

mut acc:u4 = 0
for i in 0..<4 {
  acc = acc + 5
}
